# imgtagplus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  imgtagplus.code-workspace  package-lock.json  package.json  pyproject.toml  requirements-clip.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  server.py  setup.sh  test_image.xmp
.agent_reports/: codebase_review_remediation_plan_03-12-26.md  codebase_review_report_03-12-26.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  MODELS.md  OPERATIONS.md
imgtagplus/: __init__.py  app.py  cli.py  logger.py  metadata.py  monitor.py  profiler.py  scanner.py  server.py  tagger.py  tags.py  tui.py  tui.tcss  vlm.py
imgtagplus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
imgtagplus/static/: index.html  input.css  main.js  style.css
launch-site/: README.md  index.html
launch-site/scripts/: create-placeholders.py  take-screenshots.py
sandbox/: pexels-connorscottmcmanus-12797153.xmp  pexels-connorscottmcmanus-12797165.xmp  pexels-david-martin-jr-291182065-13185335.xmp  pexels-david-martin-jr-291182065-13185339.xmp
static/: index.html  input.css  main.js  style.css  theme.js
tests/: conftest.py  test_app_runtime.py  test_cli.py  test_metadata.py  test_profiler.py  test_scanner.py  test_server_browse.py  test_server_images.py  test_server_tagging.py  test_tagger_cache.py  test_vlm.py
